@@ -13,8 +13,11 @@ import com.gradle.superscalarsim.cpu.*;
 import com.gradle.superscalarsim.enums.DataTypeEnum;
 import com.gradle.superscalarsim.enums.RegisterReadinessEnum;
 import com.gradle.superscalarsim.enums.RegisterTypeEnum;
-import com.gradle.superscalarsim.loader.InitLoader;
+import com.gradle.superscalarsim.loader.DynamicDataProvider;
+import com.gradle.superscalarsim.loader.IDataProvider;
+import com.gradle.superscalarsim.loader.StaticDataProvider;
 import com.gradle.superscalarsim.models.FunctionalUnitDescription;
+import com.gradle.superscalarsim.models.register.RegisterFile;
 import com.gradle.superscalarsim.models.register.RegisterFileModel;
 import com.gradle.superscalarsim.models.register.RegisterModel;
 import org.junit.Assert;
@@ -23,13 +26,14 @@ import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class ForwardSimulationTest
 {
   // Use this to step the sim
   Cpu cpu;
   
-  InitLoader initLoader;
+  IDataProvider staticDataProvider;
   
   InstructionMemoryBlock instructionMemoryBlock;
   private SimulationStatistics simulationStatistics;
@@ -151,10 +155,12 @@ public class ForwardSimulationTest
                                   new FunctionalUnitDescription(9, FunctionalUnitDescription.Type.Memory, 1, "Mem"));
     
     
-    SimulationConfig cfg = new SimulationConfig("", new ArrayList<>(), cpuCfg);
+    SimulationConfig cfg = new SimulationConfig("", new ArrayList<>(), cpuCfg, 0);
     
-    this.initLoader = new InitLoader(Arrays.asList(integerFile, floatFile), new ArrayList<>());
-    this.cpu        = new Cpu(cfg, null, initLoader);
+    RegisterFile registerFile = new RegisterFile(Arrays.asList(integerFile, floatFile), List.of());
+    this.staticDataProvider = new DynamicDataProvider(registerFile,
+                                                      new StaticDataProvider().getInstructionFunctionModels());
+    this.cpu                = new Cpu(cfg, null, staticDataProvider);
     CpuState cpuState = this.cpu.cpuState;
     // Fix the statistics - nothing gets allocated
     cpuState.statistics.allocateInstructionStats(50);
@@ -214,7 +220,7 @@ public class ForwardSimulationTest
   public void simulate_oneIntInstruction_finishesAfterSevenTicks()
   {
     
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  add x1,x2,x3
                                  """);
@@ -277,7 +283,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_threeIntRawInstructions_finishesAfterElevenTicks()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  add x3,x4,x5
                                  add x2,x3,x4
@@ -420,7 +426,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_intOneRawConflict_usesFullPotentialOfTheProcessor()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  sub x5,x4,x5
                                  add x2,x3,x4
@@ -429,6 +435,7 @@ public class ForwardSimulationTest
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
     
+    // Fetch 3
     this.cpu.step();
     Assert.assertEquals("sub", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals("add", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
@@ -438,6 +445,7 @@ public class ForwardSimulationTest
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // Fetch last, rename 3
     this.cpu.step();
     Assert.assertEquals("add", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals("sub tg0,x4,x5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
@@ -451,56 +459,42 @@ public class ForwardSimulationTest
     Assert.assertEquals(RegisterReadinessEnum.kAllocated,
                         this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // Issue the three, decode the last
     this.cpu.step();
     Assert.assertEquals(3, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals("add tg3,x4,x3", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
     Assert.assertEquals("sub tg0,x4,x5", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("add tg1,x3,x4", this.aluIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
     Assert.assertEquals("add tg2,tg1,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(2).getRenamedCodeLine());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // The [0] or [1] can be executed, [0] is chosen (no particular reason), removed from the issue window
+    // Also the last instruction made it to issue window
     this.cpu.step();
     Assert.assertEquals(4, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals("add tg2,tg1,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("add tg3,x4,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
+    // 2 FUs busy, last adder did not have anything to work on
     Assert.assertEquals("sub tg0,x4,x5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("add tg1,x3,x4", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // The last instruction is executed by addSecondFunctionBlock
+    // One instruction waits for the tg1 to finish
     this.cpu.step();
     Assert.assertEquals("add tg2,tg1,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    // 3 FUs busy
     Assert.assertEquals("add tg3,x4,x3", this.addSecondFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("sub tg0,x4,x5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("add tg1,x3,x4", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // First two computed
     this.cpu.step();
     Assert.assertEquals(4, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
-    Assert.assertEquals("add tg3,x4,x3", this.addSecondFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    // addFunctionBlock starts work on the last instruction immediately
     Assert.assertEquals("add tg2,tg1,x3", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("add tg3,x4,x3", this.addSecondFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    // tg0 done, tg1 done
     Assert.assertEquals(4, (int) this.unifiedRegisterFileBlock.getRegister("tg1").getValue(DataTypeEnum.kInt), 0.01);
     Assert.assertEquals(RegisterReadinessEnum.kAllocated,
                         this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -512,19 +506,17 @@ public class ForwardSimulationTest
                         this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
     this.cpu.step();
+    // The first two instructions are committed
     Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
+    // Last one is done, but the #3 (id 2) is still computing in addFunctionBlock
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
     Assert.assertEquals("add tg2,tg1,x3", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    // Registers
     Assert.assertEquals(-2, (int) this.unifiedRegisterFileBlock.getRegister("x5").getValue(DataTypeEnum.kInt), 0.01);
     Assert.assertEquals(4, (int) this.unifiedRegisterFileBlock.getRegister("x2").getValue(DataTypeEnum.kInt), 0.01);
-    Assert.assertEquals(RegisterReadinessEnum.kExecuted,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kExecuted,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // Head of ROB is committable
     this.cpu.step();
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(2).isReadyToBeCommitted());
@@ -536,6 +528,7 @@ public class ForwardSimulationTest
                         this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // And committed
     this.cpu.step();
     Assert.assertEquals(0, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals(4, (int) this.unifiedRegisterFileBlock.getRegister("x2").getValue(DataTypeEnum.kInt), 0.01);
@@ -545,7 +538,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_oneFloatInstruction_finishesAfterSevenTicks()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  fadd.s f1,f2,f3
                                  """);
@@ -611,7 +604,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_threeFloatRawInstructions_finishesAfterElevenTicks()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  fadd.s f3,f4,f5
                                  fadd.s f2,f3,f4
@@ -765,7 +758,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_floatOneRawConflict_usesFullPotentialOfTheProcessor()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  fsub.s f5,f4,f5
                                  fadd.s f2,f3,f4
@@ -901,7 +894,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_jumpFromLabelToLabel_recordToBTB()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   jal x0,lab3
                                  lab1:
@@ -1028,7 +1021,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_wellDesignedLoop_oneMisfetch()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   loop:
                                     beq x3,x0,loopEnd
@@ -1269,7 +1262,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_ifElse_executeFirstFragment()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   beq x5,x0,labelIf
                                   subi x1,x1,10
@@ -1373,7 +1366,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_ifElse_executeElseFragment()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   beq x3, x0, labelIf
                                   subi x1, x1, 10
@@ -1446,7 +1439,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_oneStore_savesIntInMemory()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   sw x3,0(x2)
                                  """);
@@ -1503,7 +1496,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_oneLoad_loadsIntInMemory()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  lw x1,0(x2)
                                  """);
@@ -1565,7 +1558,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_loadBypassing_successfullyLoadsFromStoreBuffer()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  subi x4,x4,5
                                  sw x3,0(x2)
@@ -1658,7 +1651,7 @@ public class ForwardSimulationTest
     // subi x3 x3 5
     // sw x3 x2 0 - store 6 to address x2 (25)
     // lw x1 x2 0 - load from address x2
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  subi x3, x3, 5
                                  sw x3, 0(x2)
@@ -1790,7 +1783,7 @@ public class ForwardSimulationTest
     // subi x3 x3 5 # x3: 6 -> 1
     // sw x3 x2 0   # x3 (1) is stored to memory [25+0]
     // lw x1 x2 0   # x1: 0 -> 1
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   subi x3, x3, 5
                                   sw x3, 0(x2)
